--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,36 @@ body {
   margin: auto;
   background: url("../images/board.jpg") no-repeat;
 }
+
+.message-area {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: rgb(83, 175, 19);
+}
+
+.table {
+  position: absolute;
+  left: 173px;
+  top: 98px;
+  border-spacing: 0px;
+}
+
+.table-cell {
+  width: 94px;
+  height: 94px;
+}
+
+.form {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 15px;
+  background-color: rgb(83, 175, 19);
+}
+
+.form-input {
+  background-color: rgb(152, 207, 113);
+  border-color: rgb(83, 175, 19);
+  font-size: 1em;
+}
