fix: margin of header

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,19 +17,12 @@ body {
   margin: 0 auto;
 }
 
-.board {
-  position: relative;
-  width: 1024px;
-  height: 863px;
-  margin: auto;
-  background: url("../images/board.jpg") no-repeat;
-}
-
 .header {
   font-family: "Capture It", Arial, Helvetica, sans-serif;
   text-align: center;
   font-size: 5em;
   color: #70961f;
+  margin: 0 auto;
 }
 
 .rules {
@@ -38,6 +31,15 @@ body {
   font-size: 1.5em;
   font-weight: 700;
   color: #70961f;
+  margin: 0 auto;
+}
+
+.board {
+  position: relative;
+  width: 1024px;
+  height: 863px;
+  margin: auto;
+  background: url("../images/board.jpg") no-repeat;
 }
 
 .message-area {
