--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,28 @@
 }
 
 @media screen and (max-width: 1080px) {
+  .message-area {
+    top: 20px;
+    right: 20px;
+  }
+
   .form {
+    bottom: 20px;
+    left: 20px;
+    right: 20px;
+    font-size: 2em;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1081px) {
+  .message-area {
+    top: 20px;
     left: 20px;
   }
 
-  .message-area {
+  .form {
+    bottom: 20px;
     right: 20px;
   }
 }
@@ -28,8 +45,6 @@ body {
 }
 
 .header {
-  width: 100%;
-  margin: 0 auto;
   font-family: "Capture It", Arial, Helvetica, sans-serif;
   text-align: center;
   font-size: 5em;
@@ -37,8 +52,6 @@ body {
 }
 
 .rules {
-  width: 100%;
-  margin: 0 auto;
   font-family: "Laptev Brush", Arial, Helvetica, sans-serif;
   text-align: center;
   font-size: 1.5em;
@@ -56,8 +69,6 @@ body {
 
 .message-area {
   position: fixed;
-  top: 20px;
-  left: 20px;
   color: #000;
   font-family: "Laptev Brush", Arial, Helvetica, sans-serif;
   font-weight: 700;
@@ -79,8 +90,6 @@ body {
 
 .form {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
   padding: 15px;
   background: linear-gradient(#0060ff, #f0ff00);
 }
